# qqq-poetry

./: .gitignore  README.md  pyproject.toml
src/qqq_poetry/: __init__.py  __main__.py  harmonic_mean.py  harmony.py
