[tool.poetry]
name = "qqq-poetry"
version = "0.1.0"
description = "A test project to learn how to use Poetry"
authors = ["Joe Rodrigue <joe.rodrigue@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "qqq_poetry", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
termcolor = "^1.1.0"
click = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
