[tool.poetry]
name = "qqq-poetry"
version = "0.1.3"
description = "A test project to learn how to use Poetry"
authors = ["Joe Rodrigue <joe.rodrigue@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "qqq_poetry", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
	harmonic-mean = 'qqq_poetry.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
